[gd_scene load_steps=9 format=3 uid="uid://dch1prjihqcvg"]

[ext_resource type="Script" uid="uid://b7os0s3jqls0q" path="res://Scripts/DialogueUI.gd" id="1_rrf6a"]
[ext_resource type="Resource" uid="uid://bkt1g0vxv3qnl" path="res://Content/Dialogues/Act1/Act1Part1DialoguePart1.tres" id="2_lwf1i"]
[ext_resource type="Texture2D" uid="uid://34hceqcyprr8" path="res://Art/Items/Files.png" id="2_opq0f"]
[ext_resource type="PackedScene" uid="uid://be8a5htekf0tm" path="res://Prefabs/CharacterPortrait.tscn" id="3_lwf1i"]
[ext_resource type="Texture2D" uid="uid://bxcl8ri5abn0d" path="res://Art/UI/DialogueBo.png" id="3_opq0f"]
[ext_resource type="PackedScene" uid="uid://c2hbernhscs83" path="res://Prefabs/ContinueArrow.tscn" id="6_opq0f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rrf6a"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.0470588, 0.0509804, 0.0627451, 1)
expand_margin_left = 2.0
expand_margin_top = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_opq0f"]
bg_color = Color(0, 0, 0.0862745, 1)

[node name="Dialogue" type="Control" groups=["DialogueUI"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rrf6a")
StartingDialogue = ExtResource("2_lwf1i")

[node name="Background" type="TextureRect" parent="."]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="ObjectOfinterestPanel" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ObjectOfInterest" type="TextureRect" parent="."]
custom_minimum_size = Vector2(200, 200)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -393.5
offset_right = 100.0
offset_bottom = 393.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_opq0f")
expand_mode = 4
stretch_mode = 5

[node name="LeftPortrait" parent="." instance=ExtResource("3_lwf1i")]
layout_mode = 0
offset_left = 6.0
offset_top = 354.0
offset_right = 406.0
offset_bottom = 755.0

[node name="RightPortrait" parent="." instance=ExtResource("3_lwf1i")]
custom_minimum_size = Vector2(300, 300)
layout_mode = 0
offset_left = 1511.0
offset_top = 352.0
offset_right = 1912.0
offset_bottom = 352.0
expand_mode = 2
stretch_mode = 5
flip_h = true

[node name="DialogueBox" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.85098)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -950.0
offset_top = -292.0
offset_right = 950.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("3_opq0f")

[node name="Label" type="Label" parent="."]
modulate = Color(0.0470588, 0.0509804, 0.0627451, 1)
layout_mode = 0
offset_left = 75.0
offset_top = 813.0
offset_right = 1886.0
offset_bottom = 1041.0
theme_override_font_sizes/font_size = 80
text = "1234567890 1234567890 1234567890 1234567890 1234567890 1234567890 12345678"
autowrap_mode = 2
visible_characters = 0
visible_characters_behavior = 1
visible_ratio = 0.0

[node name="ContinueArrow" parent="." instance=ExtResource("6_opq0f")]
layout_mode = 0
offset_left = 1852.0
offset_top = 1019.0
offset_right = 1902.0
offset_bottom = 1057.0

[node name="Actions" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(1925, 495)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 77.0
offset_right = 5.0
offset_bottom = -508.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftOwner" type="Label" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 695.0
offset_right = 465.0
offset_bottom = 818.0
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_rrf6a")
text = "Jack Feathers"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RightOwner" type="Label" parent="."]
custom_minimum_size = Vector2(300, 150)
layout_mode = 0
offset_left = 1567.0
offset_top = 643.0
offset_right = 1867.0
offset_bottom = 793.0
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_rrf6a")
text = "Olivia 
Receptionist"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
text_direction = 1

[node name="CoverPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_opq0f")
